--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 	margin-top: 5px;
 }
 .competences{
-margin-top: -40px;
+margin-top: -25px;
 
 margin-left: 300px;
 }
@@ -45,7 +45,7 @@ ul .mainUl{
 }
 
 .containerCreate input{
-	display: table-caption;
+	display: table;
 	margin-bottom: 10px;
 }
 
